Add more slides

--- a/_content/lessons/101.html
+++ b/_content/lessons/101.html
@@ -1,6 +1,6 @@
 ---
 layout: presentation
-title: Applying software engineering conncepts to analytics
+title: Applying software engineering concepts to analytics
 lesson: 101
 ---
 
@@ -40,8 +40,8 @@ layout: false
 ## Enter: Analytics Engineer
 
 - Provide clean data sets to end users
-    - Models data in a way that empowers end users to answer their own questions. 
-- Spends their time transforming, testing, deploying, and documenting data. 
+    - Models data in a way that empowers end users to answer their own questions.
+- Spends their time transforming, testing, deploying, and documenting data.
 - Applies software engineering best practices like version control and continuous integration (CI) to the analytics code base
 
 ---
@@ -78,9 +78,9 @@ template: title
 - Anyone could write a SQL statement to get a metric
     - but doesn’t necessarily mean it’s true!
 
-- The solution: transform the raw data into a shape that’s ready for analytics. At the time, there were only two widely-used options: 
+- The solution: transform the raw data into a shape that’s ready for analytics. At the time, there were only two widely-used options:
 - Looker’s Persistent Derived Tables
-    - Get a data engineer involved 
+    - Get a data engineer involved
 
 ---
 
