--- a/_content/lessons/208.html
+++ b/_content/lessons/208.html
@@ -3,7 +3,11 @@ layout: presentation
 title: Techniques of the trade
 lesson: 208
 ---
-<!-- just putting this here to prevent a silly jekyll warning at compile time -->
+<!--
+Notes:
+- This presentation has gotten really long!
+- Should we move some of these up to closer to the Jinja section?
+-->
 
 {% raw %}
 
@@ -11,8 +15,12 @@ lesson: 208
 
 ???
 We've already learned the tools of the trade (dbt), but now we are learning the techniques.
-We're going to go through a series of problems that analytics engineers often have to solve, and discuss how we would typically solve them. Feel free to jump in with suggested Technique at any point.
+We're going to go through a series of problems that analytics engineers often have to solve, and discuss how we would typically solve them. Feel free to jump in with suggested techniques at any point.
 
+Notes for teacher:
+* This presentation has _a lot_ in it. The goal of this lesson is to show students what they _can_ do with dbt/give them the resources to solve these problems in the future.
+* Also use this time to answer any unsolved problems from earlier in the course
+* Take a collaborative approach: for each problem, see if any students can suggest a solution
 
 ---
 
@@ -350,7 +358,7 @@ To-do
 Useful for "date spining"
 --
 
-## Techique: dbt-utils.date_spine
+## Technique: dbt-utils.date_spine
 ---
 # Anatomy of a date spine
 
@@ -381,8 +389,48 @@ Also note that you need the utils package installed, and to `dbt deps`
 * [Discourse post](https://discourse.getdbt.com/t/finding-active-days-for-a-subscription-user-account-date-spining/265)
 
 ---
+# My runs take too long when I'm developing
+--
+## Technique: Limit data in dev
+???
+* Especially useful for event-style data
+---
+# `{{ target }}`
+* A dbt-specific Jinja variable containing information about your current target
+    * `{{ target.name }}`
+    * `{{ target.schema }}`
+    * `{{ target.type }}`
+    * `{{ target.user }}`
+    * etc
 
-# I want to add a threshold to the uniquness test
+[Learn more](https://docs.getdbt.com/docs/target)
+
+???
+* These docs are dbt docs, not Jinja docs
+
+---
+# Anatomy of limiting data in dev
+
+```sql
+with pages as (
+
+    select * from {{ source('snowplow', 'pages') }}
+
+    {% if target.name == 'dev' %}
+    where event_date >= dateadd('day', -3, current_date)
+    {% endif %}
+
+),
+...
+```
+
+???
+Tradeoffs:
+* This doesn't work so well for relational data — you can lose relational integrity
+* Also how do you then test that your dashboards work as expected?
+
+---
+# I want to add a threshold to the uniqueness test
 --
 
 ```yml
@@ -509,6 +557,8 @@ models:
 # More information
 - [Read the docs](https://docs.getdbt.com/docs/custom-schema-tests)
 - Check out open-sourced [schema tests](https://github.com/fishtown-analytics/dbt-utils#schema-tests)
+
+
 
 
 ---
