First cuts of 105, 107-109

--- a/_content/lessons/107.html
+++ b/_content/lessons/107.html
@@ -1,7 +1,7 @@
 ---
 layout: presentation
 title: Sources // Docs
-lesson: 107-1
+lesson: 107
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
@@ -225,3 +225,8 @@ be updated as part of the same workflow as the transformation logic it seeks to
 describe. If they are separate, documentation will _always_ lag behind.
 
 ---
+
+background-color: orange
+class: middle, bottom
+
+# Questions?
