Fix lesson numbering. Still old numbering

--- a/_content/lessons/106.html
+++ b/_content/lessons/106.html
@@ -1,7 +1,7 @@
 ---
 layout: presentation
 title: Testing & CI
-lesson: 107-1
+lesson: 106
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
