Update 105 DWH Design

--- a/_content/lessons/105.html
+++ b/_content/lessons/105.html
@@ -413,26 +413,11 @@ group by 1,2
 
 # Who can write that SQL?
 
-<div class="row">
-  <div class="column">
-    <img src="/lessons/img/105_10.png" style="width: 10%;">
-    <img src="/lessons/img/105_11.png" style="width: 10%;">
-    <img src="/lessons/img/105_12.png" style="width: 10%;">
-  </div>
-  <div class="column">
-    <img src="/lessons/img/105_13.png" style="width: 10%;">
-    <img src="/lessons/img/105_14.png" style="width: 10%;">
-    <img src="/lessons/img/105_15.png" style="width: 10%;">
-  </div>
-  <div class="column">
-    <img src="/lessons/img/105_16.png" style="width: 10%;">
-    <img src="/lessons/img/105_17.png" style="width: 10%;">
-  </div>
-</div>
-
+<img src="/lessons/img/105_10.png" class="img-center">
 ---
 
-background-color: orange
-class: middle, bottom
+# Working session
 
-# Questions?
+Refactor your project to be consistent with how we (Fishtown) structure our dbt project. Consider
+- model naming
+- organization within directories
